<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arka"
    tools:context=".app">


    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:background="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toTopOf="@+id/adView2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="53dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button"
        android:text="@string/t8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/button"
        android:text="@string/t9"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button"
        android:text="@string/t10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/t11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="48dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="19dp"
        android:text="@string/t12"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#F3EDC2"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/bannermenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>