<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arka"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:text="@string/Translate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="233dp"
        android:background="@drawable/btn_background"
        android:text="@string/t1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tranlatelATEDTEXT"
        app:layout_constraintTop_toTopOf="@+id/sp2" />

    <EditText
        android:id="@+id/sourcetext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="34dp"
        android:gravity="top"
        android:hint="@string/t2"
        android:minHeight="100dp"
        android:textColor="#FFEB3B"
        android:textColorHint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"></Spinner>

    <Spinner
        android:id="@+id/sp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"></Spinner>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t3"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/translate"
        app:layout_constraintTop_toTopOf="@+id/translate" />

    <TextView
        android:id="@+id/tranlatelATEDTEXT"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="59dp"
        android:layout_marginBottom="59dp"
        android:hint="@string/t4"
        android:scrollbars="vertical"
        android:textColor="#FFEB3B"
        android:textColorHint="#FFEB3B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:text="@string/t5"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourcetext" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/bannermetin"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>